@@ -1,3 +1,7 @@
+2002-08-11  Tim Jenness  <t.jenness@jach.hawaii.edu>
+
+	* SLA.xs: Add slaPertel and slaPertue
+
 2002-05-24  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* SLA.pm: Make release 0.95
